--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
 <html>
-  <h1>This is my Portfolio</h1>
+<head> <The Room> </The>
+    <meta charset="UTF-8" />
+    <title>title</title>
+</head>
+<body>
+  
+</body>
 </html>
