--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <html>
-  <h1>This is my Portfolio</h1>
+  <h1>Liam Rodrigs Portfolio</h1>
 </html>
+
+git config --global user.email "liam.rodrigs@stu.ocsb"
+git config --global user.name "LiamElephant"
