--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
   <h1>Liam Rodrigs Portfolio</h1>
 </html>
-
-git config --global user.email "liam.rodrigs@stu.ocsb"
-git config --global user.name "LiamElephant"
+git_config_--global_user.name_"LiamElephant"
+git_config_--global_user.email_"liam.rodrigs@stu.ocsb"
