--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <The Room> </The>
+<head> <The Liam Code Room> </The>
     <meta charset="UTF-8" />
     <title>title</title>
 </head>
