--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
 <html>
-  <h1>The Liam Rodrigs Code Room</h1>
+  <h1>The Liam Rodrigs Code Portfolio/Website</h1>
 </html>
-git_config_--global_user.name_"LiamElephant"
-git_config_--global_user.email_"liam.rodrigs@stu.ocsb"
