--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
   <h1>The Liam Rodrigs Code Portfolio/Website</h1>
 </html>
 <h1>Weekly Journal</h1>
-# Week : Febuary 5
-# "We watched a movie called the imitation game on the pioneer of 
+Week #1 : Febuary 5
+"We watched a movie called the imitation game on the pioneer of 
 computer science who is a man named Alan Turing and how he broke
 during the second world war."
-# Week : Febuary 12
-# "We Started with downloading multiple software installments needed
+Week #2 : Febuary 12
+"We Started with downloading multiple software installments needed
 to create this website including the sections as weekly journal, Class
 projects, and useful bookmarks"
 <h1>Class Projects</h1>
