--- a/index.html
+++ b/index.html
@@ -1,22 +1,6 @@
 <html>
   <h1>The Liam Rodrigs Code Portfolio/Website</h1>
 </html>
-<h1>Weekly Journal</h1>
-Week #1 : Febuary 5
-"We watched a movie called the imitation game on the pioneer of 
-computer science who is a man named Alan Turing and how he broke
-during the second world war."
-Week #2 : Febuary 12
-"We Started with downloading multiple software installments needed
-to create this website including the sections as weekly journal, Class
-projects, and useful bookmarks"
-<h1>Class Projects</h1>
-<h1>Useful Bookmarks</h1>
-"<a href="https://codehs.com">Code HS</a>"
-"<a href="https://github.com/?authuser=0">Git Hub</a>"
-"<a href="https://codepen.io/">Code Pen</a>"
-"<a href="https://academy.cs.cmu.edu/">CMU CS Academy</a>"
-"<a href="https://cscircles.cemc.uwaterloo.ca/">CS Circles</a>"
-"<a href="https://www.w3schools.com/">W3 Schools</a>"
-"<a href="https://www.codecademy.com/">Code Academy</a>"
-"<a href="https://www.typingclub.com/">Typing Club</a>"
+"<a href="Journal.html">Weekly Journal</a>"
+"<a href="Projects.html">Class Projects</a>"
+"<a href="Bookmarks.html">Useful Bookmarks</a>"
