--- a/Journal.html
+++ b/Journal.html
@@ -1,9 +1,20 @@
 <h1>Weekly Journal</h1>
-# Week : Febuary 5
-# "We watched a movie called the imitation game on the pioneer of 
+Week : Febuary # 5
+"I watched a movie called the imitation game on the pioneer of 
 computer science who is a man named Alan Turing and how he broke
-during the second world war."
-# Week : Febuary 12
-# "We Started with downloading multiple software installments needed
+enigma during the second world war."
+
+Week : Febuary # 12
+"I Started with downloading multiple software installments needed
 to create this website including the sections as weekly journal, Class
 projects, and useful bookmarks"
+
+Week : Febuary # 19
+"I started a project (languages of the world) where we had to research
+a specific language (for me it was lua) add ceratin characteristics "
+
+Week : Febuary # 26
+""
+
+Week : March # 4
+""
