--- a/Projects.html
+++ b/Projects.html
@@ -1,1 +1,7 @@
 <h1>Class Projects</h1>
+"<a href="https://docs.google.com/document/d/1LIUfOKghol-qAZ2qyqtCG18B07d2Fsiw3lYgVL7U7DE/edit?usp=sharing">Languages Of The World - Computer Science : Lua
+</a>"
+"<a href="https://docs.google.com/document/d/1Ie9YahSfcKwTABSbXrSQaSm9tzOkG8mo-d5Yb9xQ9HE/edit?usp=sharing">Languages Of The World - Computer Science : Lua - Work Cited
+</a>"
+"<a href="https://liamrodrigs.github.io/HOC/">History of Computers Website</a>"
+
