--- a/Bookmarks.html
+++ b/Bookmarks.html
@@ -1,3 +1,4 @@
+<html>
 <h1>Useful Bookmarks</h1>
 "<a href="https://codehs.com">Code HS</a>"
 "<a href="https://github.com/?authuser=0">Git Hub</a>"
@@ -7,3 +8,4 @@
 "<a href="https://www.w3schools.com/">W3 Schools</a>"
 "<a href="https://www.codecademy.com/">Code Academy</a>"
 "<a href="https://www.typingclub.com/">Typing Club</a>"
+</html>
