--- a/Projects.html
+++ b/Projects.html
@@ -1,3 +1,4 @@
+<html>
 <h1>Class Projects</h1>
 "<a href="https://docs.google.com/document/d/1LIUfOKghol-qAZ2qyqtCG18B07d2Fsiw3lYgVL7U7DE/edit?usp=sharing">Languages Of The World - Computer Science : Lua
 </a>" <p>This is a project where I discover and research the computer programming langage called lua.</p>
@@ -6,4 +7,5 @@
 </a>" <p>This is the work cited of the project. </p>
 
 "<a href="https://liamrodrigs.github.io/HOC/">History of Computers Website</a>"
-
+<p></p>
+</html>
