--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
+<html>
 <h1>The Liam Rodrigs Code Portfolio/Website</h1>
 "<a href="Journal.html">Weekly Journal</a>"
 "<a href="Projects.html">Class Projects</a>"
 "<a href="Bookmarks.html">Useful Bookmarks</a>"
+</html>
