--- a/Projects.html
+++ b/Projects.html
@@ -12,6 +12,6 @@
 
 "<a href="https://liamrodrigs.github.io/HOC/">History of Computers Website</a>"
 
-<p>This is a project where I reasearch about Herman Hollerith, his significanace in computer sceince, photos of him and his inventions, some great 
-quotes and facts, other pertienent or interesting information about him anf lastly the sources/links which are under works cited.</p>
+<p>This is a project where I reasearch about Herman Hollerith, his significance in computer science, photos of him and his inventions, some great 
+quotes and facts, other pertinent or interesting information about him and lastly the sources/links which are under works cited.</p>
 </html>
