--- a/Projects.html
+++ b/Projects.html
@@ -3,7 +3,7 @@
 "<a href="https://docs.google.com/document/d/1LIUfOKghol-qAZ2qyqtCG18B07d2Fsiw3lYgVL7U7DE/edit?usp=sharing">Languages Of The World - Computer Science : Lua
 </a>" 
 
-<p>This is a project where I discover the computer programming langage called lua.</p>
+<p>This is a project where I discover the computer programming language called lua.</p>
 
 "<a href="https://docs.google.com/document/d/1Ie9YahSfcKwTABSbXrSQaSm9tzOkG8mo-d5Yb9xQ9HE/edit?usp=sharing">Languages Of The World - Computer Science : Lua - Work Cited
 </a>" 
@@ -12,6 +12,6 @@
 
 "<a href="https://liamrodrigs.github.io/HOC/">History of Computers Website</a>"
 
-<p>This is a project where I reasearch about Herman Hollerith, his significance in computer science, photos of him and his inventions, some great 
+<p>This is a project where I research about Herman Hollerith, his significance in computer science, photos of him and his inventions, some great 
 quotes and facts, other pertinent or interesting information about him and lastly the sources/links which are under works cited.</p>
 </html>
