--- a/Bookmarks.html
+++ b/Bookmarks.html
@@ -8,4 +8,5 @@
 "<a href="https://www.w3schools.com/">W3 Schools</a>"
 "<a href="https://www.codecademy.com/">Code Academy</a>"
 "<a href="https://www.typingclub.com/">Typing Club</a>"
+"<a href="https://app.gocobi.com/">Gobi</a>"
 </html>
