--- a/Journal.html
+++ b/Journal.html
@@ -27,4 +27,5 @@
     make our rasberry pi's light up like cords of rainbow, thridly we 
     presented our poster board's of languages (code:lua), finally we did 
     MCU with python."</li>
+    <li>Firstly we started with completing Gobi taks of Javascript syntax </li>
 </ul>
