--- a/Journal.html
+++ b/Journal.html
@@ -7,7 +7,7 @@
     enigma during the second world war."</li>
     <li>Week : Febuary # 12
     "I Started with downloading multiple software installments needed
-    to create this website including the sections as weekly journal, Class
+    to create this website including the sections as weekly journal, class
     projects, and useful bookmarks."</li>
     <li>Week : Febuary # 19
     "I started a project (languages of the world) where we had to research
@@ -24,8 +24,25 @@
     everyday life. "</li>
     <li>Week : March # 4
     "Firstly I started with completing an HOC Website, secondly CSE came in to
-    make our rasberry pi's light up like cords of rainbow, thridly we 
+    make our rasberry pi's light up like cords of rainbow, thirdly we 
     presented our poster board's of languages (code:lua), finally we did 
     MCU with python."</li>
-    <li>Firstly we started with completing Gobi taks of Javascript syntax </li>
+    <li>Week : March # 18 
+    "Firstly I started with completing Gobi tasks of Javascript syntax,
+    than I did CSE in making new mac passwords plus usernames as well,
+    lastly I did our first quiz in github which included 4 programs
+    such as a temperature converter, leap year checker, largest
+    number finder, and finally a grade calculator based on a designated scale."</li>
+    <li>Week : March # 25
+    "I did a javascript basic code syntax within codehs where there was a specific 
+    tutorial which enbaled js coding teaching in a variety of teaching ways such
+    as videos, programs, codes, algorithims, quizzes, questions etc. Plus I had
+    to submit a daily progress/check in screenshot within google classroom for
+    maximal effiency.</li>
+    <li>Week : April # 1
+    ""
+    </li>
+    <li>Week : April # 8
+    ""
+    </li>
 </ul>
