--- a/Projects.html
+++ b/Projects.html
@@ -14,4 +14,10 @@
 
 <p>This is a project where I research about Herman Hollerith, his significance in computer science, photos of him and his inventions, some great 
 quotes and facts, other pertinent or interesting information about him and lastly the sources/links which are under works cited.</p>
+
+"<a href="https://vscode.dev/github/LiamRodrigs/ICS3U/blob/main/Unit01/1.1-Output.js">1.1 - Output and Console
+</a>" 
+
+<p>This is an project where I had to add javascript code to print the adress for Apple Inc, Output two blank lines, Print Microsofts adress with only a single console.log() command,
+Output another two blank lines, than finally ouput special characters of x and o using one console.log() command and horizontal tabs in between both letters.</p>
 </html>
