--- a/Journal.html
+++ b/Journal.html
@@ -38,9 +38,13 @@
     tutorial which enbaled js coding teaching in a variety of teaching ways such
     as videos, programs, codes, algorithims, quizzes, questions etc. Plus I had
     to submit a daily progress/check in screenshot within google classroom for
-    maximal effiency.</li>
+    maximal effiency."</li>
     <li>Week : April # 1
-    ""
+    "I did complete unit 3 of the javascirpt syntax in codehs tutorials and started unit
+    4, than I proceeded to do CSE in making for loops and setting up pixels of the unicorn
+    hat using a different # or amount of calls. FinallyI completed 5 assignment of Unit - 1 :
+    Javascipt : 1.1 - output and console, 1.2 - variables, 1.3 - mathematics, 1.4 - user input,
+    1.5 - conditionals part 1 and 2.
     </li>
     <li>Week : April # 8
     ""
