--- a/Projects.html
+++ b/Projects.html
@@ -15,9 +15,31 @@
 <p>This is a project where I research about Herman Hollerith, his significance in computer science, photos of him and his inventions, some great 
 quotes and facts, other pertinent or interesting information about him and lastly the sources/links which are under works cited.</p>
 
-"<a href="https://vscode.dev/github/LiamRodrigs/ICS3U/blob/main/Unit01/1.1-Output.js">1.1 - Output and Console
+"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.1-Output.js">1.1 - Output and Console
 </a>" 
 
 <p>This is an project where I had to add javascript code to print the adress for Apple Inc, Output two blank lines, Print Microsofts adress with only a single console.log() command,
 Output another two blank lines, than finally ouput special characters of x and o using one console.log() command and horizontal tabs in between both letters.</p>
+
+"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.2%20-%20Variables.js">1.2 - Variables</a>"
+
+<p>This is a project where I programmed a task of creating variables such as the length and width Plus
+the intial area of a shape </p>
+
+"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.3%20-%20Mathematics.js">1.3 - Mathematics</a>"
+
+<p>This is the work cited of the project. </p>
+
+"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.4%20-%20User%20Input.js">1.4 - User Input</a>"
+
+<p>This is the work cited of the project. </p>
+
+"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.5%20-%20Conditionals%201.js">1.5 - Conditionals Part 1</a>"
+
+<p>This is the work cited of the project. </p>
+
+"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.5%20-%20Conditionals%202.js">1.5 - Conditionals Part 2</a>"
+
+<p>This is the work cited of the project. </p>
+
 </html>
