New file in addition

--- a/Projects.html
+++ b/Projects.html
@@ -3,7 +3,10 @@
 "<a href="https://docs.google.com/document/d/1LIUfOKghol-qAZ2qyqtCG18B07d2Fsiw3lYgVL7U7DE/edit?usp=sharing">Languages Of The World - Computer Science : Lua
 </a>" 
 
-<p>This is a project where I discover the computer programming language called lua.</p>
+<p>This is a project where I discover the computer programming language called lua, in deeper search
+such as : Who created it and when. Why it was created? What its mainly used for, Examples of programs created with this language
+Benefits to this language over others. Negatives to this language over others, Job opportunities if you can master this language
+Popularity compared to other languages ,Anything interesting. Lastly 1 sample program.</p>
 
 "<a href="https://docs.google.com/document/d/1Ie9YahSfcKwTABSbXrSQaSm9tzOkG8mo-d5Yb9xQ9HE/edit?usp=sharing">Languages Of The World - Computer Science : Lua - Work Cited
 </a>" 
@@ -15,31 +18,11 @@
 <p>This is a project where I research about Herman Hollerith, his significance in computer science, photos of him and his inventions, some great 
 quotes and facts, other pertinent or interesting information about him and lastly the sources/links which are under works cited.</p>
 
-"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.1-Output.js">1.1 - Output and Console
-</a>" 
+"<a href="https://www.canva.com/design/DAGCP0qRjHw/TMPEAQ5TtJEgo1xQlCFXXw/edit?utm_content=DAGCP0qRjHw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Careers In ICS (Individual Assignment)
+</a>"
 
-<p>This is an project where I had to add javascript code to print the adress for Apple Inc, Output two blank lines, Print Microsofts adress with only a single console.log() command,
-Output another two blank lines, than finally ouput special characters of x and o using one console.log() command and horizontal tabs in between both letters.</p>
-
-"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.2%20-%20Variables.js">1.2 - Variables</a>"
-
-<p>This is a project where I programmed a task of creating variables such as the length and width Plus
-the intial area of a shape </p>
-
-"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.3%20-%20Mathematics.js">1.3 - Mathematics</a>"
-
-<p>This is the work cited of the project. </p>
-
-"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.4%20-%20User%20Input.js">1.4 - User Input</a>"
-
-<p>This is the work cited of the project. </p>
-
-"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.5%20-%20Conditionals%201.js">1.5 - Conditionals Part 1</a>"
-
-<p>This is the work cited of the project. </p>
-
-"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.5%20-%20Conditionals%202.js">1.5 - Conditionals Part 2</a>"
-
-<p>This is the work cited of the project. </p>
+<p>This is a project where I researched about a main job category within the field range of computer science
+in being programming, I gave a brief description plus the responsibilities of programming 
+</p>
 
 </html>
