--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@
 "<a href="Journal.html">Weekly Journal</a>"
 "<a href="Projects.html">Class Projects</a>"
 "<a href="Bookmarks.html">Useful Bookmarks</a>"
+"<a href="Unit1.html">Unit 1 - Intro to Javascript : Assignments</a>"
 </html>
