--- a/Journal.html
+++ b/Journal.html
@@ -1,3 +1,4 @@
+<html>
 <h1>Weekly Journal</h1>
 
 <ul>
@@ -44,9 +45,18 @@
     4, than I proceeded to do CSE in making for loops and setting up pixels of the unicorn
     hat using a different # or amount of calls. Finally I completed 5 assignments of Unit - 1 :
     Javascript : 1.1 - output and console, 1.2 - variables, 1.3 - mathematics, 1.4 - user input,
-    lastly 1.5 - conditionals part 1 and 2.
+    lastly 1.5 - conditionals part 1 and 2."
     </li>
     <li>Week : April # 8
+    "Firstly I started off with completing a research project named careers in ICS which
+    was ultimately deemed an individual base assingment, than i proceeded to do CSE in making
+    bouncing/obscilating pixels which is essentially a point on the unicornhat using the rasberry pi
+    in enabling movement horizontally forwards plus backwards as well, then I proceeded to do a midterm self
+    assesment/evalutaion in google forms, and lastly to top it off with a quiz on the topic og unit 1 - Javascript
+    of the format within google forms as well."
+    </li>
+    <li>Week : April # 15 
     ""
     </li>
 </ul>
+</html>
