--- a/Journal.html
+++ b/Journal.html
@@ -52,10 +52,42 @@
     was ultimately deemed an individual base assingment, than i proceeded to do CSE in making
     bouncing/obscilating pixels which is essentially a point on the unicornhat using the rasberry pi
     in enabling movement horizontally forwards plus backwards as well, then I proceeded to do a midterm self
-    assesment/evalutaion in google forms, and lastly to top it off with a quiz on the topic og unit 1 - Javascript
+    assesment/evalutaion in google forms, and lastly to top it off with a quiz on the topic of unit 1 - Javascript
     of the format within google forms as well."
     </li>
     <li>Week : April # 15 
+    "Firstly I started off with doing an intital mini task of a 1st classroom repo, than I did another Unit 1 - Javascript
+    assignment which was 1.6 - Logical Operators % Modulus as well, than I did a review of 1.1-1.5 all in js, afterwards I
+    configured how to use CSE within laptops in the software application of VsCode, additonally when CSE came in we all toegther discovered
+    how to make an obscilating column within the parametres of the unicornhat, also I did a practical test in VsCode where
+    I had to code a simple guessing game in the langauge of javascript, lastly I started with the new unit which is #2 - Javascript
+    assignment labeled 2.1 - Functions."
+    </li>
+    <li>Week : April # 22 
+    ""
+    </li>
+    <li>Week : April # 29 
+    ""
+    </li>
+    <li>Week : May # 6 
+    ""
+    </li>
+    <li>Week : May # 13 
+    ""
+    </li>
+    <li>Week : May # 20
+    ""
+    </li>
+    <li>Week : May # 27 
+    ""
+    </li>
+    <li>Week : June # 3
+    ""
+    </li>
+    <li>Week : June # 10
+    ""
+    </li>
+    <li>Week : June # 17
     ""
     </li>
 </ul>
