--- a/Projects.html
+++ b/Projects.html
@@ -15,14 +15,20 @@ Popularity compared to other languages ,Anything interesting. Lastly 1 sample pr
 
 "<a href="https://liamrodrigs.github.io/HOC/">History of Computers Website</a>"
 
-<p>This is a project where I research about Herman Hollerith, his significance in computer science, photos of him and his inventions, some great 
+<p>This is a project where I researched about Herman Hollerith in the form of a website, his significance in computer science, photos of him and his inventions, some great 
 quotes and facts, other pertinent or interesting information about him and lastly the sources/links which are under works cited.</p>
 
 "<a href="https://www.canva.com/design/DAGCP0qRjHw/TMPEAQ5TtJEgo1xQlCFXXw/edit?utm_content=DAGCP0qRjHw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Careers In ICS (Individual Assignment)
 </a>"
 
 <p>This is a project where I researched about a main job category within the field range of computer science
-in being programming, I gave a brief description plus the responsibilities of programming 
-</p>
+in being programming, I gave a brief description plus the responsibilities of programming, the education required
+for such a career, the future possiblities (outlook) for this specific career being programming, the salary range,
+a description of why I would or would not want to be interested in such a career like the example of programming,
+the entrance/academic requirements, description of the first year program (courses) that I would intially take,
+a sample of other things necessary to complete this degree exactly or even the diploma requirements,
+the length of time to complete the degree or diploma reunification for the entire complexition of the courses
+, and lastly how this specific career I have chosen in section one helps me fulfill the vocation that God has 
+truthfully sent me to.</p>
 
 </html>
