--- a/Unit1.html
+++ b/Unit1.html
@@ -4,27 +4,37 @@
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.1-Output.js">1.1 - Output and Console
 </a>" 
 
-<p>This is an project where I had to add javascript code to print the adress for Apple Inc, Output two blank lines, Print Microsofts adress with only a single console.log() command,
+<p>This is an assignment where I had to add javascript code to print the adress for Apple Inc, Output two blank lines, Print Microsofts adress with only a single console.log() command,
 Output another two blank lines, than finally ouput special characters of x and o using one console.log() command and horizontal tabs in between both letters.</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.2%20-%20Variables.js">1.2 - Variables</a>"
 
-<p>This is a project where I programmed a task of creating variables such as the length and width Plus
-the intial area of a shape </p>
+<p>This is a assingment where I programmed a task of creating variables such as the length and width Plus
+the intial area of a shape, printing the definitve result using strings plus operators as well, and lastly changing variables of actual names either last or even first also.</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.3%20-%20Mathematics.js">1.3 - Mathematics</a>"
 
-<p>This is the work cited of the project. </p>
+<p>This is an assignment where I had to add values to celsius, change the value of farenheight, convert celsius to farenheight and vice versa, set a variable,
+output the current value to the actual console, print the official conversion, define the coordinates of points of A and B, and lastly calculate the slope using the specific formula.</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.4%20-%20User%20Input.js">1.4 - User Input</a>"
 
-<p>This is the work cited of the project. </p>
+<p></p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.5%20-%20Conditionals%201.js">1.5 - Conditionals Part 1</a>"
 
-<p>This is the work cited of the project. </p>
+<p></p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.5%20-%20Conditionals%202.js">1.5 - Conditionals Part 2</a>"
 
-<p>This is the work cited of the project. </p>
+<p></p>
+
+"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Review%201.1-1.5.js">Review 1.1-1.5</a>"
+
+<p></p>
+
+"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.6%20-%20Logical%20Operators%20%26%20Modulus.js">1.6 - Logical Operators & Modulus</a>"
+
+<p></p>
+
 </html>
