File save in completion

--- a/Unit1.html
+++ b/Unit1.html
@@ -1,33 +1,42 @@
 <html>
-<h1>Unit 1 - Intro to Javascript : Assignments</h1>
+<h1>Unit 1 - Intro to Javascript : Tasks</h1>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.1-Output.js">1.1 - Output and Console
 </a>" 
 
-<p>This is an assignment where I had to add javascript code to print the adress for Apple Inc, Output two blank lines, Print Microsofts adress with only a single console.log() command,
+<p>This is an task where I had to add javascript code to print the adress for Apple Inc, Output two blank lines, Print Microsofts adress with only a single console.log() command,
 Output another two blank lines, than finally ouput special characters of x and o using one console.log() command and horizontal tabs in between both letters.</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.2%20-%20Variables.js">1.2 - Variables</a>"
 
-<p>This is a assingment where I programmed a task of creating variables such as the length and width Plus
+<p>This is a task where I programmed a task of creating variables such as the length and width Plus
 the intial area of a shape, printing the definitve result using strings plus operators as well, and lastly changing variables of actual names either last or even first also.</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.3%20-%20Mathematics.js">1.3 - Mathematics</a>"
 
-<p>This is an assignment where I had to add values to celsius, change the value of farenheight, convert celsius to farenheight and vice versa, set a variable,
+<p>This is an task where I had to add values to celsius, change the value of farenheight, convert celsius to farenheight and vice versa, set a variable,
 output the current value to the actual console, print the official conversion, define the coordinates of points of A and B, and lastly calculate the slope using the specific formula.</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.4%20-%20User%20Input.js">1.4 - User Input</a>"
 
-<p></p>
+<p>This is a task where I had to declare the intial prompt enabled for a user input, asking the year of birth,
+asking for a name, printing the length of the name within "mystring", and finally converting the temperature from farenheight to celsius.
+</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.5%20-%20Conditionals%201.js">1.5 - Conditionals Part 1</a>"
 
-<p></p>
+<p>This is a task where I check if the user's age qualifies for senior discount or if they're too young, aking the user for their 
+own individual name and then therefore storing it in variable labeled user_name, checking if the user's name matches the one exactly named and if it is indeed longer than 7 characters than it will print
+a message if true such as for example"you have a long name", asking the user how long his name is (in terms of characters length), checking if the user's input matches the length of their name and therfore printing the actual 
+result, lastly checking if the user's age is even or odd and than printing that specific result in certain fashion wise. 
+</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.5%20-%20Conditionals%202.js">1.5 - Conditionals Part 2</a>"
 
-<p></p>
+<p>This is a task where I prompt the user for their own name and then I therefore have a variable that equates to
+user_name, than I ask them for their primary age in which I check if the user is old enough to drive or not, than I show the
+menu using special lines in \n 
+</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Review%201.1-1.5.js">Review 1.1-1.5</a>"
 
