--- a/Unit2.html
+++ b/Unit2.html
@@ -1,7 +1,11 @@
 <html>
-<h1>Unit 2 - Javascript : Assignments</h1>
+<h1>Unit 2 - Javascript : Tasks</h1>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/2.1%20-%20Functions.js">2.1 - Functions</a>"
+
+<p>This is a task </p>
+
+"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/2.2%20-%20Return%20Statements.js">2.2 - Return Statements</a>"
 
 <p></p>
 
