--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "<a href="Journal.html">Weekly Journal</a>"
 "<a href="Projects.html">Class Projects</a>"
 "<a href="Bookmarks.html">Useful Bookmarks</a>"
-"<a href="Unit1.html">Unit 1 - Intro to Javascript : Assignments</a>"
-"<a href="Unit2.html">Unit 2 - Javascript : Assignments</a>"
+"<a href="Unit1.html">Unit 1 - Intro to Javascript : Tasks</a>"
+"<a href="Unit2.html">Unit 2 - Javascript : Tasks</a>"
 "<a href="QuizzesTests.html">Quizzes and Tests</a>"
 </html>
