Overdue Commits/Changes

--- a/Journal.html
+++ b/Journal.html
@@ -64,13 +64,24 @@
     assignment labeled 2.1 - Functions."
     </li>
     <li>Week : April # 22 
-    ""
+    "Firstly I started off with doing a Unit 2 task called 2.2 - return statements, than I proceeded to put all of my 
+     Unit 1 tasks in a completely seperate repository in enabling to better access for sole marking purposes, additionally
+     I did vice versa for all of the unit 2 tasks as well, afterwards I did a new unit 2 task being 2.3 - scope, than CSE came in
+     and we continued to do challenges such as lighting pixels up in terms of movement up the y/x axis, lastly I finished
+     off the week by doing the Unit 2 review tasks plus starting an extra assignment called the "Monty Hall" "
     </li>
     <li>Week : April # 29 
-    ""
+    "Firstly I started off with doing the Unit 2 Summative assesment, than I proceeded with Cse 
+    in which it was our last ultimate and sufficient day with them by playing around with games such as 
+    one of pong, fighter flight, catching a ball etc. , and lastly I finished off the week by completing a task labeled while loops with starting
+    a new unit numbered as 3.1 called looping."
     </li>
     <li>Week : May # 6 
-    ""
+    "First off I started with doing a Unit 3 task being 3.2 - strings, than completing 
+    others by the name of: 3.3 - Do While, 3.4 - For Loops, checking the updated class schedule in the format of
+    google sheets, 3.5 - Nested Loops, 3.6 - Arrays, putting them all in one repository named Advanced control constructs
+    for unit 3 tasks collectively and lastly creating a CSE challenges repo in making 3 folders seperately to properly organize
+    all challenges into sections of being total beginner, intermediate, and finally expert."
     </li>
     <li>Week : May # 13 
     ""
