--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 "<a href="Bookmarks.html">Useful Bookmarks</a>"
 "<a href="Unit1.html">Unit 1 - Intro to Javascript : Tasks</a>"
 "<a href="Unit2.html">Unit 2 - Javascript : Tasks</a>"
+"<a href="Unit3.html">Unit 3 - Looping : Tasks</a>"
 "<a href="QuizzesTests.html">Quizzes and Tests</a>"
 </html>
