--- a/Unit2.html
+++ b/Unit2.html
@@ -3,9 +3,13 @@
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/2.1%20-%20Functions.js">2.1 - Functions</a>"
 
-<p>This is a task </p>
+<p>This is a task</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/2.2%20-%20Return%20Statements.js">2.2 - Return Statements</a>"
+
+<p></p>
+
+"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/2.3%20-%20Scope.js">2.3 - Scope</a>"
 
 <p></p>
 
