--- a/Projects.html
+++ b/Projects.html
@@ -3,7 +3,7 @@
 "<a href="https://docs.google.com/document/d/1LIUfOKghol-qAZ2qyqtCG18B07d2Fsiw3lYgVL7U7DE/edit?usp=sharing">Languages Of The World - Computer Science : Lua
 </a>" 
 
-<p>This is a project where I discover the computer programming language called lua, in deeper search
+<p>This is a project whee I discover the computer programming language called lua, in deeper search
 such as : Who created it and when. Why it was created? What its mainly used for, Examples of programs created with this language
 Benefits to this language over others. Negatives to this language over others, Job opportunities if you can master this language
 Popularity compared to other languages ,Anything interesting. Lastly 1 sample program.</p>
