--- a/Unit2.html
+++ b/Unit2.html
@@ -7,10 +7,10 @@
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/2.2%20-%20Return%20Statements.js">2.2 - Return Statements</a>"
 
-<p></p>
+<p>This is a task</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/2.3%20-%20Scope.js">2.3 - Scope</a>"
 
-<p></p>
+<p>This is a task</p>
 
 </html>
