--- a/Unit3.html
+++ b/Unit3.html
@@ -5,7 +5,23 @@
 
 <p>This is a task</p>
 
-"<a href="https://github.com/ics-ASH/3-1-while-loops-LiamRodrigs/blob/main/3.1-While.js">3.2 - Strings</a>"
+"<a href="https://github.com/ics-ASH/3-2-strings-LiamRodrigs/blob/main/3.2%20-%20Strings.js">3.2 - Strings</a>"
+
+<p>This is a task</p>
+
+"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/Unit03/3.3%20-%20Do%20While.js">3.3 - Do While</a>"
+
+<p>This is a task</p>
+
+"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/Unit03/3.4%20-%20For%20Loops.js">3.4 - For Loops</a>"
+
+<p>This is a task</p>
+
+"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/Unit03/3.5%20-%20Nested%20Loops.js">3.5 - Nested Loops</a>"
+
+<p>This is a task</p>
+
+"<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/Unit03/3.6%20-%20Arrays.js">3.6 - Arrays</a>"
 
 <p>This is a task</p>
 
