--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <h1>This is my Portfolio</h1>
+  <h1>The Liam Rodrigs Code Portfolio/Website - RST</h1>
+  "<a href="Journal.html">Weekly Journal</a>"
+  "<a href="Projects.html">Class Projects</a>"
+  "<a href="Bookmarks.html">Useful Bookmarks</a>"
+  "<a href="FinalProject.html">Final Project</a>"
+
+  <div class="toggle-button" onclick="document.querySelector('.box').classList.toggle('active')">
+    Toggle Box
+  </div>
+  <div class="box"></div>
+
 </html>
