Test of styles and interactivity

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   "<a href="Projects.html">Class Projects</a>"
   "<a href="Bookmarks.html">Useful Bookmarks</a>"
   "<a href="FinalProject.html">Final Project</a>"
+  "<a href="interactive.js">Final Project</a>"
+  "<a href="styles.css">Final Project</a>"
 
   <div class="toggle-button" onclick="document.querySelector('.box').classList.toggle('active')">
-    Toggle Box
+  CLick here
   </div>
   <div class="box"></div>
 
