--- a/Unit1.html
+++ b/Unit1.html
@@ -36,12 +36,12 @@ result, lastly checking if the user's age is even or odd and than printing that 
 
 <p>This is a task where I prompt the user for their own name and then I therefore have a variable that equates to
 user_name, than I ask them for their primary age in which I check if the user is old enough to drive or not, than I show the
-menu using special lines in \n 
+menu using special lines in \n and lastly when I checked if a random number is prime or not.
 </p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Review%201.1-1.5.js">Review 1.1-1.5</a>"
 
-<p>This is a task</p>
+<p>This is a task where I prompt the user for a temperature</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.6%20-%20Logical%20Operators%20%26%20Modulus.js">1.6 - Logical Operators & Modulus</a>"
 
