--- a/Bookmarks.html
+++ b/Bookmarks.html
@@ -22,4 +22,7 @@
 "<a href="DevDocs/">Dev Docs</a>"
 "<a href="https://computerhistory.org/">The Computer History Museum</a>"
 "<a href="https://dl.acm.org/">The ACM Digital Library</a>"
+<script>document.getElementById("myButton").addEventListener("click", function() {
+    alert("Button clicked!");
+  });</script>
 </html>
