--- a/Journal.html
+++ b/Journal.html
@@ -84,7 +84,9 @@
     all challenges into sections of being total beginner, intermediate, and finally expert."
     </li>
     <li>Week : May # 13 
-    ""
+    "First off I started with finalizing/completing unit 3 tasks once and for all, afterwards I went on and reached ahead
+     in updating and adding some divisions, elements, and lastly comments which ultimately enhances the interactivity plus styles overall.
+     Additionally I added some new advancements in connecting my computer with an individual and unique rasberry pi."
     </li>
     <li>Week : May # 20
     ""
