--- a/Unit1.html
+++ b/Unit1.html
@@ -41,10 +41,12 @@ menu using special lines in \n and lastly when I checked if a random number is p
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Review%201.1-1.5.js">Review 1.1-1.5</a>"
 
-<p>This is a task where I prompt the user for a temperature</p>
+<p>This is a task where I prompt the user for a temperature and than convert it to a fixed one.</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.6%20-%20Logical%20Operators%20%26%20Modulus.js">1.6 - Logical Operators & Modulus</a>"
 
-<p>This is a task</p>
+<p>This is a task where I ask the user if they want to play a specific game, checking if the number inputted by the user is either
+even or odd as well on top of it, console.logging to the console if the user has a jazzy number, checking if a set of numbers given 
+is jazzy or not by ++ operators and -- additionally.</p>
 
 </html>
