--- a/Unit3.html
+++ b/Unit3.html
@@ -3,7 +3,7 @@
 
 "<a href="https://github.com/ics-ASH/3-1-while-loops-LiamRodrigs/blob/main/3.1-While.js">3.1 - While Loops</a>"
 
-<p>This is a task</p>
+<p>This is a task where </p>
 
 "<a href="https://github.com/ics-ASH/3-2-strings-LiamRodrigs/blob/main/3.2%20-%20Strings.js">3.2 - Strings</a>"
 
