--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   "<a href="Projects.html">Class Projects</a>"
   "<a href="Bookmarks.html">Useful Bookmarks</a>"
   "<a href="FinalProject.html">Final Project</a>"
-  
+
   <div class="toggle-button" onclick="document.querySelector('.box').classList.toggle('active')">
-  CLick here
+  Click here
   </div>
   <div class="box"></div>
 
