--- a/index.html
+++ b/index.html
@@ -11,4 +11,20 @@
   </div>
   <div class="box"></div>
 
+  Tag	Purpose
+  <title>Content</title>	This will place the content in the tab or top bar of the browser application window. This tag must be placed inside the <head> of the page
+  <h1>Content</h1>	This is a heading tag - do not confuse this with the <title> tag. Headings can have 6 different sizes where <h1> is the largest and <h6> is the smallest. Try them out!
+  <b>Content</b>	This will bold the content
+  <strong>Content</strong>	This will also bold the content but has a slightly different meaning. This means that the content is very important
+  <i>Content</i>	This will italicize the content
+  <em>Content</em>	This will also italicize the content but similar to the <strong> tag, it has a level of importance to it, describing the content as quite important
+  <p>Content</p>	This is the paragraph tag and is useful to separate text into paragraphs. By default it will put an empty line between paragraphs of text
+  <div>Content</div>	One of the most-used tags, this is a divider or section or container of content for the page. As you become used to HTML and styling your page you will learn to use these to break-up your content for different looks or areas on the page
+  <button>Text</button>	This will place a clickable grey button with the Text written on it. For now the button will do nothing but we'll learn to make it react using JavaScript
+  <br>	Insert a break-line
+  <hr>	Insert a horizontal line across the page
+  <img>	The image tag is used to insert a picture (jpg, png, etc) on the page.
+  It requires many options.
+  For Example: <img src="myfile.png" width="200px">
+
 </html>
