--- a/Unit2.html
+++ b/Unit2.html
@@ -6,7 +6,7 @@
 <p>This is a task where I went to use var instead of let because of flexibility purposes, prompting the user
 for daily routine and concurrent activities which individuals perform, than calculating total amount of tax with 
 a function created, peforming it based on whether or not the operator is based on dividers, testing the actual function,
-defining the  thereom 
+defining the pythagorean thereom
 </p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/2.2%20-%20Return%20Statements.js">2.2 - Return Statements</a>"
