--- a/Journal.html
+++ b/Journal.html
@@ -89,7 +89,8 @@
      Additionally I added some new advancements in connecting my computer with an individual and unique rasberry pi."
     </li>
     <li>Week : May # 20
-    ""
+    "This whole week I was just working on the unit 3 presentation where I got into a group of 4 and then proceeded with developing
+    an informative research topic in relation to strings."
     </li>
     <li>Week : May # 27 
     ""
