--- a/Bookmarks.html
+++ b/Bookmarks.html
@@ -1,25 +1,25 @@
 <html>
 <h1>Useful Bookmarks</h1>
-"<a href="https://codehs.com/">Code HS</a>"
-"<a href="https://github.com/?authuser=0">Git Hub</a>"
-"<a href="https://codepen.io/">Code Pen</a>"
-"<a href="https://academy.cs.cmu.edu/">CMU CS Academy</a>"
-"<a href="https://cscircles.cemc.uwaterloo.ca/">CS Circles</a>"
-"<a href="https://www.w3schools.com/">W3 Schools</a>"
-"<a href="https://www.codecademy.com/">Code Academy</a>"
-"<a href="https://www.typingclub.com/">Typing Club</a>"
-"<a href="https://app.gocobi.com/">Gobi</a>"
-"<a href="https://stackoverflow.com/">Stack Overflow</a>"
-"<a href="https://developer.mozilla.org/en-US/">MDN Web Docs</a>"
-"<a href="https://www.geeksforgeeks.org/">Geeks For Geeks</a>"
-"<a href="https://www.khanacademy.org/computing/computer-science">Khan Academy - Computer Science</a>"
-"<a href="https://www.khanacademy.org/computing">Khan Academy - Computing</a>"
-"<a href="https://www.coursera.org/">Coursera</a>"
-"<a href="https://scholar.google.ca/">Google Scholar</a>"
-"<a href="https://arxiv.org/">Ar Xiv</a>"
-"<a href="HackerRank/LeetCode">Hacker Rank/Leet Code</a>"
-"<a href="https://ocw.mit.edu/">MIT Open Course Ware</a>"
-"<a href="DevDocs/">Dev Docs</a>"
-"<a href="https://computerhistory.org/">The Computer History Museum</a>"
-"<a href="https://dl.acm.org/">The ACM Digital Library</a>"
+<table>" <tr><a href="https://codehs.com/">Code HS</a>"</tr>
+<tr>"<a href="https://github.com/?authuser=0">Git Hub</a>"</tr>
+<tr>"<a href="https://codepen.io/">Code Pen</a>"</tr>
+<tr>"<a href="https://academy.cs.cmu.edu/">CMU CS Academy</a>"</tr>
+<tr>"<a href="https://cscircles.cemc.uwaterloo.ca/">CS Circles</a>"</tr>
+<tr>"<a href="https://www.w3schools.com/">W3 Schools</a>"</tr>
+<tr>"<a href="https://www.codecademy.com/">Code Academy</a>"</tr>
+<tr>"<a href="https://www.typingclub.com/">Typing Club</a>"</tr>
+<tr>"<a href="https://app.gocobi.com/">Gobi</a>"</tr>
+<tr>"<a href="https://stackoverflow.com/">Stack Overflow</a>"</tr>
+<tr>"<a href="https://developer.mozilla.org/en-US/">MDN Web Docs</a>"</tr>
+<tr>"<a href="https://www.geeksforgeeks.org/">Geeks For Geeks</a>"</tr>
+<tr>"<a href="https://www.khanacademy.org/computing/computer-science">Khan Academy - Computer Science</a>"</tr>
+<tr>"<a href="https://www.khanacademy.org/computing">Khan Academy - Computing</a>"</tr>
+<tr>"<a href="https://www.coursera.org/">Coursera</a>"</tr>
+<tr>"<a href="https://scholar.google.ca/">Google Scholar</a>"</tr>
+<tr>"<a href="https://arxiv.org/">Ar Xiv</a>"</tr>
+<tr>"<a href="HackerRank/LeetCode">Hacker Rank/Leet Code</a>"</tr>
+<tr>"<a href="https://ocw.mit.edu/">MIT Open Course Ware</a>"</tr>
+<tr>"<a href="DevDocs/">Dev Docs</a>"</tr>
+<tr>"<a href="https://computerhistory.org/">The Computer History Museum</a>"</tr>
+<tr>"<a href="https://dl.acm.org/">The ACM Digital Library</a>"</tr></table>
 </html>
