Java and CSS incorporation within html files entirely

--- a/Journal.html
+++ b/Journal.html
@@ -1,6 +1,19 @@
 <html>
 <h1>Weekly Journal</h1>
 
+<head>  
+
+<link rel="stylesheet" href="css/styles.css">
+
+</head>
+
+<head>
+<script>window.addEventListener("scroll", function() {
+    let scrollPosition = window.scrollY;
+    if (scrollPosition > 100) {
+      // Do something when scrolled past 100 pixels
+    }
+  });</script>
 <ul>
     <li>Week : Febuary # 5
     "I watched a movie called the imitation game on the pioneer of 
@@ -93,10 +106,13 @@
     an informative research topic in relation to strings."
     </li>
     <li>Week : May # 27 
-    ""
+    "This week I was fully devoted on working within my tribute page of Fouseytube in the form of an website
+    and had the chance to go to a very well off put together art showcase in the midddle of the week for a
+    change of scenery."
     </li>
     <li>Week : June # 3
-    ""
+    "This week I was working on 7.3 (being a project where I created a website in the form of a tirbute page for the infamous youtuber; Fouseytube) , 7.4(creating two unique buttons including one of
+    a reducer and resetter), and 7.5 (Events in Html/Js where there was one margin) collectively."
     </li>
     <li>Week : June # 10
     ""
@@ -105,4 +121,5 @@
     ""
     </li>
 </ul>
+</head>
 </html>
