--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <h1>The Liam Rodrigs Code Portfolio/Website - RST</h1>
+
+<head>  
+
+<link rel="stylesheet" href="css/styles.css">
+        
+  </head>
+
   "<a href="Journal.html">Weekly Journal</a>"
   "<a href="Projects.html">Class Projects</a>"
   "<a href="Bookmarks.html">Useful Bookmarks</a>"
