focussing on changing the main_styles css folder

--- a/Bookmarks.html
+++ b/Bookmarks.html
@@ -20,13 +20,13 @@
 <tr>"<a href="https://developer.mozilla.org/en-US/">MDN Web Docs</a>"</tr>
 <tr>"<a href="https://www.geeksforgeeks.org/">Geeks For Geeks</a>"</tr>
 <tr>"<a href="https://www.khanacademy.org/computing/computer-science">Khan Academy - Computer Science</a>"</tr>
-<tr>"<a href="https://www.khanacademy.org/computing">Khan Academy - Computing</a>"</tr>
-<tr>"<a href="https://www.coursera.org/">Coursera</a>"</tr>
-<tr>"<a href="https://scholar.google.ca/">Google Scholar</a>"</tr>
-<tr>"<a href="https://arxiv.org/">Ar Xiv</a>"</tr>
-<tr>"<a href="HackerRank/LeetCode">Hacker Rank/Leet Code</a>"</tr>
-<tr>"<a href="https://ocw.mit.edu/">MIT Open Course Ware</a>"</tr>
-<tr>"<a href="DevDocs/">Dev Docs</a>"</tr>
-<tr>"<a href="https://computerhistory.org/">The Computer History Museum</a>"</tr>
-<tr>"<a href="https://dl.acm.org/">The ACM Digital Library</a>"</tr></table>
+<tr>"<a href="https://www.khanacademy.org/computing">Khan Academy - Computing</a>"
+<tr>"<a href="https://www.coursera.org/">Coursera</a>"
+<tr>"<a href="https://scholar.google.ca/">Google Scholar</a>"
+<tr>"<a href="https://arxiv.org/">Ar Xiv</a>"
+<tr>"<a href="HackerRank/LeetCode">Hacker Rank/Leet Code</a>"
+<tr>"<a href="https://ocw.mit.edu/">MIT Open Course Ware</a>"
+<tr>"<a href="DevDocs/">Dev Docs</a>"
+<tr>"<a href="https://computerhistory.org/">The Computer History Museum</a>"
+<tr>"<a href="https://dl.acm.org/">The ACM Digital Library</a>"</table>
 </html>
