--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
   "<a href="FinalProject.html">Final Project</a>"
 
   <div class="toggle-button" onclick="document.querySelector('.box').classList.toggle('active')">
-  Click here
   </div>
-  <div class="box"></div>
+  <div class="box">Click here for a fun experience!</div>
 
   Tag	Purpose
   <title>Content</title>	This will place the content in the tab or top bar of the browser application window. This tag must be placed inside the <head> of the page
