--- a/Journal.html
+++ b/Journal.html
@@ -115,10 +115,12 @@
     a reducer and resetter), and 7.5 (Events in Html/Js where there was one margin) collectively."
     </li>
     <li>Week : June # 10
-    ""
+    "This week we were doing all of the unit 3 presentations varying from topics within javascript of: strings, while loops, do while
+    loops, for loops, nested loops, and lastly arrays. I was additonally introduced to our RST where we have to pick a proposal in gorups of 4
+    and than therefore create either a game, storyboard, or website from coding by the form of developing from scratch."
     </li>
     <li>Week : June # 17
-    ""
+    "This week I was working on my RST with group mebers including Fuxuan, Alex and finally Yann."
     </li>
 </ul>
 </head>
